# gene_network_evaluation

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
app/: Endothelial.yaml  README.md  app.py  parse.py  plot.py  requirements.txt
app/pages/: overview.py  program_annotation.py  programs_summary.py
app/tests/: association_categorical.ipynb  association_perturbation.ipynb  association_tests.ipynb  eda.ipynb  enrichment_motif.ipynb  evaluation_pipeline.yml  gene_set_enrichment.ipynb  motif_enrichment.ipynb  overview.ipynb  parse.ipynb  program_summary.ipynb  uniquely_enriched.ipynb
benchmarking/: __init__.py
benchmarking/evals/: __init__.py  _template.py  batch_association.py  compute_batch_association.py  compute_explained_variance_ratio.py  compute_geneset_enrichment.py  compute_r2_score.py  template.py
benchmarking/plotting/: __init__.py  plot_volcano.py
benchmarking/tests/: __init__.py  test_evals.py
dashapp/: README.md  app.py  data_processing.py  deprecated.py  mdata.html  multipage_app.py  parse.py  parse_eval_pipeline_outs.ipynb  plot.py  utils.py
dashapp/example_data/: run_evaluation_scripts.ipynb
dashapp/pages/: cross_run.py  overview.py  program.py  single_run.py  summary.py
dashapp/scratch/: create_mudata.ipynb  (+1 more)
evals/: template.py
evaluation/: __init__.py
generate_gwas_benchmarks/: 0_Query_OpenTargets_Genetics_L2G.ipynb  1_Filter_OpenTargets_L2G.ipynb  2_create_adjacency_matrix.py  Query_OpenTargets_Genetics_L2G.ipynb  Untitled.ipynb
plotting/: __init__.py
smk/: .gitignore  README.md
src/: __init__.py
(+335 files in other folders)
